<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vortex_utility_nodes</name>
  <version>0.0.0</version>
  <description>Useful nodes for debugging and testing</description>
  <maintainer email="cyprian.github@gmail.com"> Cyprian Osinski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vortex_msgs</depend>
  <depend>vortex_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
